# aoc25

./: aoc.cabal  aoc1.hs  aoc10.hs  aoc11.hs  aoc12.hs  aoc2.hs  aoc3.hs  aoc4.hs  aoc5.hs  aoc6.hs  aoc7.hs  aoc8.hs  aoc9.hs
